--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "test": "jest"
+        "test": "vitest"
     },
     "dependencies": {
         "react": "^19.1.0",
@@ -27,6 +27,7 @@
         "jest": "^29.7.0",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "vitest": "^3.1.4"
     }
 }
